--- a/package.json
+++ b/package.json
@@ -5,15 +5,28 @@
   "main": "index.js",
   "dependencies": {
     "jest": "^26.4.2",
+    "mini-css-extract-plugin": "^0.11.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^4.3.0",
+    "style-loader": "^1.2.1",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
+  },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "dev": "webpack-dev-server",
+    "start": "webpack"
   },
   "repository": {
     "type": "git",
@@ -24,5 +37,11 @@
   "bugs": {
     "url": "https://github.com/frisko-sposad/EPAM-Task/issues"
   },
-  "homepage": "https://github.com/frisko-sposad/EPAM-Task#readme"
+  "homepage": "https://github.com/frisko-sposad/EPAM-Task#readme",
+  "babel": {
+    "presets": [
+      "@babel/env",
+      "@babel/react"
+    ]
+  }
 }
