--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "scripts": {
     "test": "jest",
-    "start": "webpack-dev-server",
+    "start": "webpack-dev-server --env",
     "build:dev": "webpack --env",
     "build:prod": "webpack --env.production"
   },
