--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-react": "7.10.4",
     "babel-loader": "8.1.0",
     "css-loader": "4.3.0",
+    "html-webpack-plugin": "4.5.0",
     "jest": "26.4.2",
     "mini-css-extract-plugin": "0.11.2",
     "style-loader": "1.2.1",
