--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "@babel/preset-react": "7.10.4",
     "babel-loader": "8.1.0",
     "css-loader": "4.3.0",
-    "eslint": "^7.10.0",
+    "eslint": "7.10.0",
     "eslint-config-airbnb": "18.2.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsx-a11y": "6.3.1",
-    "eslint-plugin-react": "^7.21.3",
+    "eslint-plugin-react": "7.21.3",
     "html-webpack-plugin": "4.5.0",
     "jest": "26.4.2",
     "mini-css-extract-plugin": "0.11.2",
