--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "test": "jest",
     "start": "webpack-dev-server --env",
     "build:dev": "webpack --env",
-    "build:prod": "webpack --env.production",
-    "lint": "eslint ./src/component/**/*.jsx"
+    "build:prod": "webpack --env.production"    
   },
   "repository": {
     "type": "git",
