--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-dom": "16.13.1",
     "react-redux": "7.2.1",
     "react-router-dom": "5.2.0",
-    "redux": "4.0.5"
+    "redux": "4.0.5",
+    "bootstrap-4-react": "0.0.59"
   },
   "devDependencies": {
     "@babel/core": "7.11.6",
@@ -16,6 +17,7 @@
     "@babel/preset-react": "7.10.4",
     "babel-loader": "8.1.0",
     "css-loader": "4.3.0",
+    "html-webpack-plugin": "4.5.0",
     "jest": "26.4.2",
     "mini-css-extract-plugin": "0.11.2",
     "style-loader": "1.2.1",
@@ -25,9 +27,9 @@
   },
   "scripts": {
     "test": "jest",
-    "start": "webpack-dev-server",
+    "start": "webpack-dev-server --env",
     "build:dev": "webpack --env",
-    "build:prod": "webpack --env.production"
+    "build:prod": "webpack --env.production"    
   },
   "repository": {
     "type": "git",
