--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
     "css-loader": "4.3.0",
     "eslint": "7.10.0",
     "eslint-config-airbnb": "18.2.0",
+    "eslint-config-prettier": "6.14.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsx-a11y": "6.3.1",
+    "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-react": "7.21.3",
+    "eslint-plugin-react-hooks": "4.2.0",
     "html-webpack-plugin": "4.5.0",
     "jest": "26.4.2",
     "mini-css-extract-plugin": "0.11.2",
+    "prettier": "2.1.2",
     "style-loader": "1.2.1",
     "webpack": "4.44.1",
     "webpack-cli": "3.3.12",
@@ -35,7 +39,8 @@
     "start": "webpack-dev-server --env",
     "build:dev": "webpack --env",
     "build:prod": "webpack --env.production",
-    "lint": "eslint ./src/component/**/*.jsx"
+    "lint": "eslint ./src/**/*.jsx",
+    "prettier": "prettier --write src/**/*.jsx"
   },
   "repository": {
     "type": "git",
