--- a/.eslintrc
+++ b/.eslintrc
@@ -21,9 +21,10 @@
     "prettier",
     "react-hooks"
   ],
-  "rules": {      
-    "linebreak-style": 0,
-    "react/prop-types": 0,
-    "object-curly-newline": 0
+  "rules": {
+    "prettier/prettier": "error",
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "error",
+    "react/prop-types": 0
   }
 }
