--- a/package.json
+++ b/package.json
@@ -17,9 +17,18 @@
     "@babel/preset-react": "7.10.4",
     "babel-loader": "8.1.0",
     "css-loader": "4.3.0",
+    "eslint": "7.10.0",
+    "eslint-config-airbnb": "18.2.0",
+    "eslint-config-prettier": "6.14.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.3.1",
+    "eslint-plugin-prettier": "3.1.4",
+    "eslint-plugin-react": "7.21.3",
+    "eslint-plugin-react-hooks": "4.2.0",
     "html-webpack-plugin": "4.5.0",
     "jest": "26.4.2",
     "mini-css-extract-plugin": "0.11.2",
+    "prettier": "2.1.2",
     "style-loader": "1.2.1",
     "webpack": "4.44.1",
     "webpack-cli": "3.3.12",
@@ -29,7 +38,11 @@
     "test": "jest",
     "start": "webpack-dev-server --env",
     "build:dev": "webpack --env",
-    "build:prod": "webpack --env.production"    
+    "build:prod": "webpack --env.production",
+    "lint": "eslint ./src/**/*.jsx",
+    "lint:fix": "npm run lint -- --fix",    
+    "prettier:write": "npm run prettier -- --write"
+    
   },
   "repository": {
     "type": "git",
