--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
     "sourceMap": true,
-    "module": "es6",
+    "module": "esnext",
     "moduleResolution": "node",
-    "target": "es6",
+    "target": "esnext",
     "jsx": "react",
     "noUnusedParameters": true,
     "noImplicitReturns": true,
