lint jsx -> tsx, Removed the output to the console and comments, added memo to import, returned childrens to buttons

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "start": "webpack-dev-server --env",
     "build:dev": "webpack --env",
     "build:prod": "webpack --env.production",
-    "lint": "eslint ./src/**/*.jsx",
+    "lint": "eslint ./src/**/*.tsx",
     "lint:fix": "npm run lint -- --fix",
     "prettier:write": "npm run prettier -- --write",
     "tsc": "tsc"
