--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@types/react-dom": "16.9.9",
     "@types/webpack": "4.41.24",
     "@types/webpack-dev-server": "3.11.1",
+    "@typescript-eslint/eslint-plugin": "4.6.1",
+    "@typescript-eslint/parser": "4.6.1",
     "babel-loader": "8.1.0",
     "css-loader": "4.3.0",
     "eslint": "7.10.0",
