--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "@babel/core": "7.11.6",
     "@babel/preset-env": "7.11.5",
     "@babel/preset-react": "7.10.4",
+    "@babel/preset-typescript": "7.12.1",
+    "@types/react": "16.9.55",
+    "@types/react-dom": "16.9.9",
+    "@types/webpack": "4.41.24",
+    "@types/webpack-dev-server": "3.11.1",
     "babel-loader": "8.1.0",
     "css-loader": "4.3.0",
     "eslint": "7.10.0",
@@ -30,6 +35,8 @@
     "mini-css-extract-plugin": "0.11.2",
     "prettier": "2.1.2",
     "style-loader": "1.2.1",
+    "ts-loader": "8.0.7",
+    "typescript": "4.0.5",
     "webpack": "4.44.1",
     "webpack-cli": "3.3.12",
     "webpack-dev-server": "3.11.0"
@@ -39,10 +46,10 @@
     "start": "webpack-dev-server --env",
     "build:dev": "webpack --env",
     "build:prod": "webpack --env.production",
-    "lint": "eslint ./src/**/*.jsx",
-    "lint:fix": "npm run lint -- --fix",    
-    "prettier:write": "npm run prettier -- --write"
-    
+    "lint": "eslint ./src/**/*.tsx",
+    "lint:fix": "npm run lint -- --fix",
+    "prettier:write": "npm run prettier -- --write",
+    "tsc": "tsc"
   },
   "repository": {
     "type": "git",
