--- a/.eslintrc
+++ b/.eslintrc
@@ -26,7 +26,7 @@
     "@typescript-eslint",
     "prettier"
   ],
-  "rules": {
+  "rules": {    
     "react/jsx-filename-extension": [
       1,
       {
@@ -38,6 +38,7 @@
         ]
       }
     ],
+    "react/prop-types": 0,
     "prettier/prettier": "error",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "error",
@@ -55,5 +56,6 @@
       "never"
     ]
   },
-  "parser": "@typescript-eslint/parser"  
+  "parser": "@typescript-eslint/parser"
 }
+
