--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@typescript-eslint/parser": "4.6.1",
     "babel-loader": "8.1.0",
     "css-loader": "4.3.0",
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "1.15.5",
+    "enzyme-to-json": "3.6.1",
     "eslint": "7.10.0",
     "eslint-config-airbnb": "18.2.0",
     "eslint-config-prettier": "6.14.0",
@@ -63,5 +66,10 @@
   "bugs": {
     "url": "https://github.com/frisko-sposad/EPAM-Task/issues"
   },
-  "homepage": "https://github.com/frisko-sposad/EPAM-Task#readme"
+  "homepage": "https://github.com/frisko-sposad/EPAM-Task#readme",
+  "jest": {
+    "setupFilesAfterEnv": [
+      "./src/setupTests.js"
+    ]
+  }
 }
