--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@babel/preset-env": "7.11.5",
     "@babel/preset-react": "7.10.4",
     "@babel/preset-typescript": "7.12.1",
+    "@types/enzyme": "3.10.8",
+    "@types/jest": "26.0.15",
     "@types/react": "16.9.55",
     "@types/react-dom": "16.9.9",
     "@types/webpack": "4.41.24",
     "@types/webpack-dev-server": "3.11.1",
     "@typescript-eslint/eslint-plugin": "4.6.1",
     "@typescript-eslint/parser": "4.6.1",
+    "babel-jest": "26.6.3",
     "babel-loader": "8.1.0",
     "css-loader": "4.3.0",
     "enzyme": "3.11.0",
@@ -38,6 +41,7 @@
     "eslint-plugin-react-hooks": "4.2.0",
     "html-webpack-plugin": "4.5.0",
     "jest": "26.4.2",
+    "jest-transform-stub": "2.0.0",
     "mini-css-extract-plugin": "0.11.2",
     "prettier": "2.1.2",
     "style-loader": "1.2.1",
@@ -66,10 +70,5 @@
   "bugs": {
     "url": "https://github.com/frisko-sposad/EPAM-Task/issues"
   },
-  "homepage": "https://github.com/frisko-sposad/EPAM-Task#readme",
-  "jest": {
-    "setupFilesAfterEnv": [
-      "./src/setupTests.js"
-    ]
-  }
+  "homepage": "https://github.com/frisko-sposad/EPAM-Task#readme"
 }
