--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-react-hooks": "4.2.0",
     "html-webpack-plugin": "4.5.0",
     "jest": "26.4.2",
+    "jest-enzyme": "7.1.2",
     "jest-transform-stub": "2.0.0",
     "mini-css-extract-plugin": "0.11.2",
     "prettier": "2.1.2",
@@ -52,7 +53,7 @@
     "webpack-dev-server": "3.11.0"
   },
   "scripts": {
-    "test": "jest",
+    "test": "jest --coverage --verbose",
     "start": "webpack-dev-server --env",
     "build:dev": "webpack --env",
     "build:prod": "webpack --env.production",
@@ -70,5 +71,10 @@
   "bugs": {
     "url": "https://github.com/frisko-sposad/EPAM-Task/issues"
   },
-  "homepage": "https://github.com/frisko-sposad/EPAM-Task#readme"
+  "homepage": "https://github.com/frisko-sposad/EPAM-Task#readme",
+  "jest": {
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
+  }
 }
