--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-config-prettier": "6.14.0",
     "eslint-import-resolver-webpack": "0.13.0",
     "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jest": "24.1.3",
     "eslint-plugin-jsx-a11y": "6.3.1",
     "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-react": "7.21.3",
@@ -71,10 +72,5 @@
   "bugs": {
     "url": "https://github.com/frisko-sposad/EPAM-Task/issues"
   },
-  "homepage": "https://github.com/frisko-sposad/EPAM-Task#readme",
-  "jest": {
-    "snapshotSerializers": [
-      "enzyme-to-json/serializer"
-    ]
-  }
+  "homepage": "https://github.com/frisko-sposad/EPAM-Task#readme"
 }
