--- a/package.json
+++ b/package.json
@@ -16,24 +16,33 @@
     "@babel/preset-env": "7.11.5",
     "@babel/preset-react": "7.10.4",
     "@babel/preset-typescript": "7.12.1",
+    "@types/enzyme": "3.10.8",
+    "@types/jest": "26.0.15",
     "@types/react": "16.9.55",
     "@types/react-dom": "16.9.9",
     "@types/webpack": "4.41.24",
     "@types/webpack-dev-server": "3.11.1",
     "@typescript-eslint/eslint-plugin": "4.6.1",
     "@typescript-eslint/parser": "4.6.1",
+    "babel-jest": "26.6.3",
     "babel-loader": "8.1.0",
     "css-loader": "4.3.0",
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "1.15.5",
+    "enzyme-to-json": "3.6.1",
     "eslint": "7.10.0",
     "eslint-config-airbnb": "18.2.0",
-    "eslint-config-prettier": "6.14.0",
+    "eslint-config-prettier": "6.14.0",    
     "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jest": "24.1.3",
     "eslint-plugin-jsx-a11y": "6.3.1",
     "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-react": "7.21.3",
     "eslint-plugin-react-hooks": "4.2.0",
     "html-webpack-plugin": "4.5.0",
     "jest": "26.4.2",
+    "jest-enzyme": "7.1.2",
+    "jest-transform-stub": "2.0.0",
     "mini-css-extract-plugin": "0.11.2",
     "prettier": "2.1.2",
     "style-loader": "1.2.1",
@@ -44,7 +53,7 @@
     "webpack-dev-server": "3.11.0"
   },
   "scripts": {
-    "test": "jest",
+    "test": "jest --coverage --verbose",
     "start": "webpack-dev-server --env",
     "build:dev": "webpack --env",
     "build:prod": "webpack --env.production",
