--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,4 @@
 {
-  "presets": [
-    "@babel/env",
-    "@babel/react",
-    "@babel/preset-typescript"
-  ]
+  "presets": ["@babel/env", "@babel/react", "@babel/preset-typescript"],
+  "plugins": ["@babel/plugin-transform-runtime"]
 }
