--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "bootstrap-4-react": "0.0.59",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-redux": "7.2.1",
     "react-router-dom": "5.2.0",
-    "redux": "4.0.5",
-    "bootstrap-4-react": "0.0.59"
+    "redux": "4.0.5"
   },
   "devDependencies": {
     "@babel/core": "7.11.6",
+    "@babel/plugin-transform-runtime": "7.12.10",
     "@babel/preset-env": "7.11.5",
     "@babel/preset-react": "7.10.4",
     "@babel/preset-typescript": "7.12.1",
@@ -32,7 +33,7 @@
     "enzyme-to-json": "3.6.1",
     "eslint": "7.10.0",
     "eslint-config-airbnb": "18.2.0",
-    "eslint-config-prettier": "6.14.0",    
+    "eslint-config-prettier": "6.14.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jest": "24.1.3",
     "eslint-plugin-jsx-a11y": "6.3.1",
