--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,6 @@
 {
   "presets": [
-    "@babel/env",
+    ["@babel/env", {"useBuiltIns": "entry",  "corejs": "3.8"}],
     "@babel/react",
     "@babel/preset-typescript"
   ]
