--- a/.eslintrc
+++ b/.eslintrc
@@ -61,7 +61,8 @@
     ],
     "camelcase": "off",
     "jsx-a11y/no-static-element-interactions": 0,
-    "jsx-a11y/click-events-have-key-events": 0
+    "jsx-a11y/click-events-have-key-events": 0,
+    "react/jsx-props-no-spreading": "off"
   },
   "parser": "@typescript-eslint/parser"
 }
