--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react": "16.9.55",
     "@types/react-dom": "16.9.9",
     "@types/react-redux": "7.1.12",
+    "@types/react-router-dom": "^5.1.7",
     "@types/webpack": "4.41.24",
     "@types/webpack-dev-server": "3.11.1",
     "@typescript-eslint/eslint-plugin": "4.6.1",
