--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-router-dom": "5.2.0",
     "redux": "4.0.5",
     "redux-thunk": "2.3.0",
-    "styled-components": "^5.2.1"
+    "styled-components": "5.2.1"
   },
   "devDependencies": {
     "@babel/core": "7.11.6",
@@ -19,17 +19,17 @@
     "@babel/preset-env": "7.11.5",
     "@babel/preset-react": "7.10.4",
     "@babel/preset-typescript": "7.12.1",
-    "@storybook/addon-actions": "^6.1.18",
-    "@storybook/addon-essentials": "^6.1.18",
-    "@storybook/addon-links": "^6.1.18",
-    "@storybook/react": "^6.1.18",
+    "@storybook/addon-actions": "6.1.18",
+    "@storybook/addon-essentials": "6.1.18",
+    "@storybook/addon-links": "6.1.18",
+    "@storybook/react": "6.1.18",
     "@types/enzyme": "3.10.8",
     "@types/jest": "26.0.15",
     "@types/react": "16.9.55",
     "@types/react-dom": "16.9.9",
     "@types/react-redux": "7.1.12",
     "@types/react-router-dom": "5.1.7",
-    "@types/styled-components": "^5.1.7",
+    "@types/styled-components": "5.1.7",
     "@types/webpack": "4.41.24",
     "@types/webpack-dev-server": "3.11.1",
     "@typescript-eslint/eslint-plugin": "4.6.1",
