--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-router-dom": "5.2.0",
     "redux": "4.0.5",
     "redux-thunk": "2.3.0",
-    "styled-components": "5.2.1"
+    "styled-components": "5.2.1",
+    "reselect": "4.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.11.6",
@@ -36,7 +37,6 @@
     "@typescript-eslint/parser": "4.6.1",
     "babel-jest": "26.6.3",
     "babel-loader": "8.1.0",
-    "babel-plugin-styled-components": "1.12.0",
     "cross-fetch": "3.0.6",
     "css-loader": "4.3.0",
     "enzyme": "3.11.0",
