--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "bootstrap-4-react": "0.0.59",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-redux": "7.2.1",
@@ -57,6 +56,7 @@
     "jest-transform-stub": "2.0.0",
     "mini-css-extract-plugin": "0.11.2",
     "prettier": "2.1.2",
+    "react-router": "5.2.0",
     "style-loader": "1.2.1",
     "ts-loader": "8.0.7",
     "typescript": "4.0.5",
