--- a/package.json
+++ b/package.json
@@ -51,9 +51,11 @@
     "eslint-plugin-react": "7.21.3",
     "eslint-plugin-react-hooks": "4.2.0",
     "html-webpack-plugin": "4.5.0",
+    "husky": "5.1.3",
     "jest": "26.4.2",
     "jest-enzyme": "7.1.2",
     "jest-transform-stub": "2.0.0",
+    "lint-staged": "10.5.4",
     "mini-css-extract-plugin": "0.11.2",
     "prettier": "2.1.2",
     "react-router": "5.2.0",
@@ -85,5 +87,13 @@
   "bugs": {
     "url": "https://github.com/frisko-sposad/EPAM-Task/issues"
   },
+  "husky": {
+    "hooks":{
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.tsx, *.ts": ["npm run lint:fix", "git add"]
+  }
   "homepage": "https://github.com/frisko-sposad/EPAM-Task#readme"
 }
