--- a/.eslintrc
+++ b/.eslintrc
@@ -31,6 +31,10 @@
     "prettier"
   ],
   "rules": {
+    "no-shadow": "off",
+    "@typescript-eslint/no-shadow": [
+      "error"
+    ],
     "react/jsx-filename-extension": [
       1,
       {
