--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "bootstrap-4-react": "0.0.59",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-redux": "7.2.1",
     "react-router-dom": "5.2.0",
     "redux": "4.0.5",
-    "redux-thunk": "2.3.0"
+    "redux-thunk": "2.3.0",
+    "styled-components": "5.2.1",
+    "reselect": "4.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.11.6",
@@ -18,12 +19,15 @@
     "@babel/preset-env": "7.11.5",
     "@babel/preset-react": "7.10.4",
     "@babel/preset-typescript": "7.12.1",
+    "@storybook/addon-links": "6.1.18",
+    "@storybook/react": "6.1.18",
     "@types/enzyme": "3.10.8",
     "@types/jest": "26.0.15",
     "@types/react": "16.9.55",
     "@types/react-dom": "16.9.9",
     "@types/react-redux": "7.1.12",
     "@types/react-router-dom": "5.1.7",
+    "@types/styled-components": "5.1.7",
     "@types/webpack": "4.41.24",
     "@types/webpack-dev-server": "3.11.1",
     "@typescript-eslint/eslint-plugin": "4.6.1",
@@ -45,11 +49,14 @@
     "eslint-plugin-react": "7.21.3",
     "eslint-plugin-react-hooks": "4.2.0",
     "html-webpack-plugin": "4.5.0",
+    "husky": "4.3.8",
     "jest": "26.4.2",
     "jest-enzyme": "7.1.2",
     "jest-transform-stub": "2.0.0",
+    "lint-staged": "10.5.4",
     "mini-css-extract-plugin": "0.11.2",
     "prettier": "2.1.2",
+    "react-router": "5.2.0",
     "style-loader": "1.2.1",
     "ts-loader": "8.0.7",
     "typescript": "4.0.5",
@@ -65,7 +72,9 @@
     "lint": "eslint ./src/**/*.tsx",
     "lint:fix": "npm run lint -- --fix",
     "prettier:write": "npm run prettier -- --write",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "repository": {
     "type": "git",
