--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,8 @@
 {
   "presets": ["@babel/env", "@babel/react", "@babel/preset-typescript"],
-  "plugins": ["@babel/plugin-transform-runtime"]
+  "plugins": ["@babel/plugin-transform-runtime",[
+  "styled-components",
+  { "ssr": true, "displayName": true, "preprocess": false }
+]]
 }
+
