--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,19 @@
 {
-  "presets": ["@babel/env", "@babel/react", "@babel/preset-typescript", "next/babel"],
-  "plugins": ["@babel/plugin-transform-runtime",[
-  "styled-components",
-  { "ssr": true, "displayName": true, "preprocess": false }
-]]
+  "presets": [
+    "@babel/env",
+    "@babel/react",
+    "@babel/preset-typescript",
+    "next/babel"
+  ],
+  "plugins": [
+    "@babel/plugin-transform-runtime",
+    [
+      "styled-components",
+      {
+        "ssr": true,
+        "displayName": true,
+        "preprocess": false
+      }
+    ]
+  ]
 }
-
