--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,14 @@
 {
-  "presets": [    
-    "next/babel"
+  "presets": [
+    [
+      "next/babel",
+      {
+        "preset-env": {},
+        "transform-runtime": {},
+        "styled-jsx": {},
+        "class-properties": {}
+      }
+    ]
   ],
   "plugins": [
     "@babel/plugin-transform-runtime",
