--- a/package.json
+++ b/package.json
@@ -7,14 +7,11 @@
     "next": "10.1.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "styled-components": "5.2.1"
+    "styled-components": "5.2.1",
+    "swr": "^0.5.6"
   },
   "devDependencies": {
-    "@babel/core": "7.11.6",
     "@babel/plugin-transform-runtime": "7.12.10",
-    "@babel/preset-env": "7.11.5",
-    "@babel/preset-react": "7.10.4",
-    "@babel/preset-typescript": "7.12.1",
     "@storybook/addon-links": "6.1.18",
     "@storybook/react": "6.1.18",
     "@types/enzyme": "3.10.8",
@@ -27,7 +24,6 @@
     "@typescript-eslint/eslint-plugin": "4.6.1",
     "@typescript-eslint/parser": "4.6.1",
     "babel-jest": "26.6.3",
-    "babel-loader": "8.1.0",
     "babel-plugin-styled-components": "1.12.0",
     "cross-fetch": "3.0.6",
     "css-loader": "4.3.0",
