fixed bug, updated isSearchPage, removed useCallback from handleSortMoviesClick

--- a/.babelrc
+++ b/.babelrc
@@ -1,17 +1,10 @@
 {
   "presets": [
     [
-      "next/babel",
-      {
-        "preset-env": {},
-        "transform-runtime": {},
-        "styled-jsx": {},
-        "class-properties": {}
-      }
+      "next/babel"
     ]
   ],
-  "plugins": [
-    "@babel/plugin-transform-runtime",
+  "plugins": [     
     [
       "styled-components",
       {
