--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "styled-components": "5.2.1",
-    "swr": "^0.5.6"
+    "swr": "0.5.6"
   },
-  "devDependencies": {
-    "@babel/plugin-transform-runtime": "7.12.10",
+  "devDependencies": {    
     "@storybook/addon-links": "6.1.18",
     "@storybook/react": "6.1.18",
     "@types/enzyme": "3.10.8",
