Task 12 Next Js (#12)
* added next.js

* removed redux

* rewritten with nextjs

* removed redux

* removed from duplication

* fixed bug

* fixed tests

* fixed bugs

* Layout

* fixed bug

* updated husky

* test commit

* gitignore vscode

* fixed

* fixed 01-06-2021

* fixed bug

* saved progress

* added useSWR, fixed bug

* added SWR

* added SWR, updatged test

* added SWR, fixed tests

* fixed bug, updated isSearchPage, removed useCallback from handleSortMoviesClick

* fixed 29.06.2021: sorting buttons click functions, new name MovieItemProps, removed unnecessary from the babel config

* added unknown genre to sorting result section, changed typing of children in the layout

* added unknown genre to sorting result section, changed typing of children in the layout

* fixed state of MovieInfo and MovieItem when there is no data, fixed bug when searching by genre of the selected movie

* fixed state of MovieInfo and MovieItem when there is no data, fixed bug when searching by genre of the selected movie

Authored-by: Aleksei Safin <aleksei_safin@epam.com>

--- a/package.json
+++ b/package.json
@@ -4,36 +4,26 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "next": "10.1.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-redux": "7.2.1",
-    "react-router-dom": "5.2.0",
-    "redux": "4.0.5",
-    "redux-thunk": "2.3.0",
     "styled-components": "5.2.1",
-    "reselect": "4.0.0"
+    "swr": "0.5.6"
   },
   "devDependencies": {
-    "@babel/core": "7.11.6",
-    "@babel/plugin-transform-runtime": "7.12.10",
-    "@babel/preset-env": "7.11.5",
-    "@babel/preset-react": "7.10.4",
-    "@babel/preset-typescript": "7.12.1",
     "@storybook/addon-links": "6.1.18",
     "@storybook/react": "6.1.18",
     "@types/enzyme": "3.10.8",
     "@types/jest": "26.0.15",
     "@types/react": "16.9.55",
     "@types/react-dom": "16.9.9",
-    "@types/react-redux": "7.1.12",
-    "@types/react-router-dom": "5.1.7",
     "@types/styled-components": "5.1.7",
     "@types/webpack": "4.41.24",
     "@types/webpack-dev-server": "3.11.1",
     "@typescript-eslint/eslint-plugin": "4.6.1",
     "@typescript-eslint/parser": "4.6.1",
     "babel-jest": "26.6.3",
-    "babel-loader": "8.1.0",
+    "babel-plugin-styled-components": "1.12.0",
     "cross-fetch": "3.0.6",
     "css-loader": "4.3.0",
     "enzyme": "3.11.0",
@@ -56,7 +46,6 @@
     "lint-staged": "10.5.4",
     "mini-css-extract-plugin": "0.11.2",
     "prettier": "2.1.2",
-    "react-router": "5.2.0",
     "style-loader": "1.2.1",
     "ts-loader": "8.0.7",
     "typescript": "4.0.5",
@@ -66,15 +55,15 @@
   },
   "scripts": {
     "test": "jest --coverage --verbose",
-    "start": "webpack-dev-server --env",
-    "build:dev": "webpack --env",
-    "build:prod": "webpack --env.production",
     "lint": "eslint ./src/**/*.tsx",
     "lint:fix": "npm run lint -- --fix",
     "prettier:write": "npm run prettier -- --write",
     "tsc": "tsc",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "next:dev": "next dev",
+    "next:build": "next build",
+    "next:start": "next start"
   },
   "repository": {
     "type": "git",
